@@ -17,6 +17,7 @@ SMN?11		New Super Mario Bros. 4
 SMN?12		Awesomer Super Luigi Mini
 SMN?31		New Super Mario Bros. Wii - Other World
 SMN?41		Devil Mario Winter Special
+SMN?60		Remixed Super Mario Bros. Wii
 SMN?66		The Legend of Yoshi
 SMN?DU		DarkUmbra Super Mario Bros: Anniversary Edition
 SMN?FL		Newer: Falling Leaf
