@@ -1,5 +1,6 @@
 v6.1.0:
 - update szs to version 1.50a
+- update title database
 - show "Enter ID (...)" message at the end of menu
 - show "ID	Name" header/footer in menu
 - show proper version number in --help
@@ -7,6 +8,7 @@ v6.1.0:
 - support for MKWiimm 2015-12
 - support for MKWiimm 2016-02
 - support for The Legend of Yoshi (SMN?66)
+- support for Remixed Super Mario Bros. Wii ()
 
 v6.0.0:
 - update szs to version 1.40a
